[project]
name = "v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "boto3==1.37.37",
    "botocore==1.37.37",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.35.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "narwhals==1.35.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pdfminer-six==20250327",
    "pdfplumber==0.11.6",
    "pillow==11.2.1",
    "pinecone==6.0.2",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.51",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "pypdfium2==4.30.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "s3transfer==0.11.5",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "stack-data==0.6.3",
    "streamlit==1.44.1",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
]
